--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+
+
+
 }
