--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0'
@@ -46,6 +48,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
